<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <ImageView
        android:id="@+id/avatarImg"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:layout_marginTop="@dimen/medium"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/colorPrimary" />

    <TextView
        android:id="@+id/idFieldTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/large"
        android:text="@string/idField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarImg"
        android:layout_marginLeft="@dimen/medium" />

    <TextView
        android:id="@+id/idTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        app:layout_constraintBaseline_toBaselineOf="@id/idFieldTxt"
        app:layout_constraintStart_toEndOf="@id/idFieldTxt"
        tools:text="123456789"
        android:layout_marginLeft="@dimen/small" />

    <TextView
        android:id="@+id/nameFieldTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/small"
        android:text="@string/nameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idFieldTxt"
        android:layout_marginLeft="@dimen/medium" />

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        app:layout_constraintBaseline_toBaselineOf="@id/nameFieldTxt"
        app:layout_constraintStart_toEndOf="@id/nameFieldTxt"
        tools:text="Boris"
        android:layout_marginLeft="@dimen/small" />

    <TextView
        android:id="@+id/surnameFieldTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/small"
        android:text="@string/surnameField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameFieldTxt"
        android:layout_marginLeft="@dimen/medium" />

    <TextView
        android:id="@+id/surnameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        app:layout_constraintBaseline_toBaselineOf="@id/surnameFieldTxt"
        app:layout_constraintStart_toEndOf="@id/surnameFieldTxt"
        tools:text="Uvarov"
        android:layout_marginLeft="@dimen/small" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
